--- a/views/all-articles.hbs
+++ b/views/all-articles.hbs
@@ -1,3 +1,4 @@
+{{>header}}
 <main>
     <h1>Welcome to KingUni Wiki!</h1>
     <section>
@@ -23,3 +24,4 @@
         </div>
     </section>
 </main>
+{{>footer}}
