--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <main>
-	<h1>Welcome to KingUni Wiki!</h1>
+	{{!-- <h1>Welcome to KingUni Wiki!</h1> --}}
 	<section id="featured">
 		<h2>Latests articles</h2>
 		<article>
