--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,6 @@
 <header>
 	<a href="login.html">Login</a>
-	<a href="register.html">Register</a>
+	<a href="/register">Register</a>
 	<span>Welcome, Bob!</span>
 	<a href="#">[Logout]</a>
 </header>
