--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,15 +1,15 @@
 <main>
-    <h1>Welcome to KingUni Wiki!</h1>
-    <section>
-        <h2>Login</h2>
-        <div class="spacer">
-            <form>
-                <label>Username:</label>
-                <input type="text">
-                <label>Password:</label>
-                <input type="password">
-                <input type="submit" value="Login">
-            </form>
-        </div>
-    </section>
+	<h1>Welcome to KingUni Wiki!</h1>
+	<section>
+		<h2>Login</h2>
+		<div class="spacer">
+			<form action="/login" method="post">
+				<label>Username:</label>
+				<input type="text" name="username" />
+				<label>Password:</label>
+				<input type="password" name="password" />
+				<input type="submit" value="Login" />
+			</form>
+		</div>
+	</section>
 </main>
