--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,5 @@
 <header>
-	<a href="login.html">Login</a>
+	<a href="/login">Login</a>
 	<a href="/register">Register</a>
 	<span>Welcome, Bob!</span>
 	<a href="#">[Logout]</a>
