--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -2,6 +2,7 @@
 	<h1>Welcome to KingUni Wiki!</h1>
 	<section>
 		<h2>Login</h2>
+		{{>notifications}}
 		<div class="spacer">
 			<form action="/login" method="post">
 				<label>Username:</label>
