--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,6 +2,7 @@
 	{{!-- <h1>Welcome to KingUni Wiki!</h1> --}}
 	<section id="featured">
 		<h2>Latests articles</h2>
+		{{>notifications}}
 		<article>
 			<h3>Astronomy</h3>
 			<p>
