--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,10 @@
 <header>
-	<a href="/login">Login</a>
-	<a href="/register">Register</a>
-	<span>Welcome, Bob!</span>
-	<a href="#">[Logout]</a>
+	{{#if isLoggedin}}
+		<span>Welcome, {{username}}</span>
+		<a href="/logout">[Logout]</a>
+
+	{{else}}
+		<a href="/login">Login</a>
+		<a href="/register">Register</a>
+	{{/if}}
 </header>
