--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -4,12 +4,12 @@
 	</div>
 
 	<nav>
-		<a href="index.html">Main Page</a>
-		<a href="all-articles.html">All Articles</a>
+		<a href="/">Main Page</a>
+		<a href="/all-articles">All Articles</a>
 		<form>
 			<input type="text" />
 			<input type="submit" value="Search" />
 		</form>
-		<a href="create.html">Create New Article</a>
+		<a href="/create">Create New Article</a>
 	</nav>
 </aside>
