--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,7 +10,7 @@
         crossorigin="anonymous"
         />
 
-		<link rel="stylesheet" href="css/site.css" />
+		<link rel="stylesheet" href="/css/site.css" type="text/css" />
 	</head>
 
 	<body class="img-fluid w-100 h-100">
