--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,6 +1,6 @@
 <aside>
 	<div class="center">
-		<img class="logo" src="img/logo.png" alt="logo" />
+		<img class="logo" src="/img/logo.png" alt="logo" />
 	</div>
 
 	<nav>
