--- a/public/css/site.css
+++ b/public/css/site.css
@@ -46,9 +46,9 @@ aside {
 
 #container {
 	float: left;
-	width: 800px;
-	border-left: 1px solid #5d89a1;
-	border-right: 1px solid #5d89a1;
+	width: 1350px;
+	border-left: 3px solid #5d89a1;
+	border-right: 3px solid #5d89a1;
 }
 
 nav > a {
@@ -149,7 +149,7 @@ textarea {
 }
 
 .spacer {
-	padding: 20px;
+	padding: 10px;
 }
 
 h2 a {
@@ -185,8 +185,8 @@ article > p {
 footer {
 	clear: both;
 	text-align: center;
-	margin: 20px;
-	padding: 20px;
+	margin: 5px;
+	padding: 5px;
 	background-color: #5d89a1;
 	color: white;
 }
@@ -208,4 +208,8 @@ footer {
 
 .success {
 	background: #7dcea0;
+}
+
+.menu {
+	border-right: 3px solid black;
 }
