Implemented search bar

--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -6,9 +6,9 @@
 	<nav>
 		<a href="/">Main Page</a>
 		<a href="/all-articles">All Articles</a>
-		<form>
-			<input type="text" />
-			<input type="submit" value="Search" />
+		<form action="/" method="GET">
+			<input type="text" name="search"/>
+			<input type="submit" value="Search"/>
 		</form>
 		<a href="/create">Create New Article</a>
 	</nav>
